--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -12,7 +12,7 @@
 		<div>
 			<h1>User Registration - Sign Up</h1>
 		</div>
-		<form th:action="@{/process_register}" th:object="${user}" 
+		<form th:action="@{/edit_user}" th:object="${user}"
 			method="post" style="max-width: 600px; margin: 0 auto;">
 		<div class="m-3">
 			<div class="form-group row">
@@ -47,7 +47,7 @@
 			</div>
 			
 			<div>
-				<button type="submit" class="btn btn-primary">Sign Up</button>
+				<button type="submit" class="btn btn-primary">Update</button>
 				<button type="reset" class="btn btn-primary" value="Reset">Reset</button>
 				<button class="btn btn-primary" onclick="goBack()">Go Back</button></td>
 			</div>
