--- a/src/main/resources/templates/login_success.html
+++ b/src/main/resources/templates/login_success.html
@@ -30,6 +30,7 @@
 	</div>
 	<div class="text-left">
 		<h3>User List</h3>
+			<a th:href="@{/register}">Create New User</a>			&nbsp;&nbsp;&nbsp;
 	</div>
 	
 	<div class="text-center">
@@ -40,6 +41,7 @@
 					<th>E-mail</th>
 					<th>First Name</th>
 					<th>Last Name</th>
+					<th>Actions</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -48,10 +50,20 @@
 					<td th:text="${user.email}">E-mail</td>
 					<td th:text="${user.firstName}">First Name</td>
 					<td th:text="${user.lastName}">Last Name</td>
+					<td>
+<!--						<a th:href="@{/edit_user}">Edit</a>-->
+						<a th:href="@{'/load_edit_user/' + ${user.id}}">Edit</a>
+						<a th:href="@{'/delete_user/' + ${user.id}}" onclick="goBack()">Delete</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 </div>
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 </body>
 </html>
