--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -18,14 +18,14 @@
 			<div class="form-group row">
 				<label class="col-4 col-form-label">E-mail: </label>
 				<div class="col-8">
-					<input type="email" th:field="*{email}" class="form-control" required />
+					<input type="email" th:field="*{email}" class="form-control" required autocomplete="off"/>
 				</div>
 			</div>
 			
 			<div class="form-group row">
 				<label class="col-4 col-form-label">Password: </label>
 				<div class="col-8">
-					<input type="password" th:field="*{password}" class="form-control" 
+					<input type="password" th:field="*{password}" class="form-control" autocomplete="off"
 							required minlength="6" maxlength="10"/>
 				</div>
 			</div>
@@ -33,7 +33,7 @@
 			<div class="form-group row">
 				<label class="col-4 col-form-label">First Name: </label>
 				<div class="col-8">
-					<input type="text" th:field="*{firstName}" class="form-control" 
+					<input type="text" th:field="*{firstName}" class="form-control" autocomplete="off"
 							required minlength="2" maxlength="20"/>
 				</div>
 			</div>
@@ -41,7 +41,7 @@
 			<div class="form-group row">
 				<label class="col-4 col-form-label">Last Name: </label>
 				<div class="col-8">
-					<input type="text" th:field="*{lastName}" class="form-control" 
+					<input type="text" th:field="*{lastName}" class="form-control" autocomplete="off"
 							required minlength="2" maxlength="20" />
 				</div>
 			</div>
@@ -49,7 +49,7 @@
 			<div>
 				<button type="submit" class="btn btn-primary">Sign Up</button>
 				<button type="reset" class="btn btn-primary" value="Reset">Reset</button>
-				<button class="btn btn-primary" onclick="goBack()">Go Back</button></td>
+				<button class="btn btn-primary" onclick="goBack()">Go Back</button>
 			</div>
 		</div>
 		</form>
