--- a/src/main/resources/templates/login_success.html
+++ b/src/main/resources/templates/login_success.html
@@ -9,23 +9,14 @@
 </head>
 <body>
 <div class="container">
-	<div class="text-right">
-		<form th:action="@{/logout}" method="post">
-			<p>
-				Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
-			</p>
-			<input type="submit" value="Sign Out" />
-		</form>
-	</div>
+
 	<div class="text-left">
 		<div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
 			<a th:href="@{/login_success}">Users</a> | &nbsp;
-<!--			<a th:href="@{/employees}">Employees</a> |-->
-			<a th:href="@{/employees}">Products</a> |
-			<a th:href="@{/employees}">Leads</a> |
-			<a th:href="@{/employees}">Activities</a> |
-			<a th:href="@{/opportunities_page}">Opportunities</a> |
-			<a th:href="@{/employees}">Members</a> |
+			<a th:href="@{/lead_list}">Leads</a> |
+			<a th:href="@{/list_activity}">Activities</a> |
+			<a th:href="@{/opportunity_list}">Opportunities</a> |
+			<a th:href="@{/login_success}">Members</a> |
 		</div>
 	</div>
 	<div class="text-left">
