Corrected Menus and navigation

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 	<div class="container text-center">
 		<h1>CRM Home</h1>
 <!--		<h3><a th:href="@{/users}">List of Users</a></h3>-->
-		<h5><a th:href="@{/login_success}">Login</a></h5>
+		<h5><a th:href="@{/user_list}">Login</a></h5>
 		<h5><a th:href="@{/register}">Register</a></h5>
 
 	</div>
