--- a/src/main/resources/templates/login_success.html
+++ b/src/main/resources/templates/login_success.html
@@ -12,11 +12,11 @@
 
 	<div class="text-left">
 		<div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
-			<a th:href="@{/login_success}">Users</a> | &nbsp;
+			<a th:href="@{/user_list}">Users</a> | &nbsp;
 			<a th:href="@{/lead_list}">Leads</a> |
-			<a th:href="@{/list_activity}">Activities</a> |
+			<a th:href="@{/activity_list}">Activities</a> |
 			<a th:href="@{/opportunity_list}">Opportunities</a> |
-			<a th:href="@{/login_success}">Members</a> |
+			<a th:href="@{/user_list}">Members</a> |
 		</div>
 	</div>
 	<div class="text-left">
