--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -12,15 +12,16 @@
 
 	<div class="text-left">
 		<div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
-			<a th:href="@{/login_success}">Users</a> | &nbsp;
+			<a th:href="@{/user_list}">Users</a> | &nbsp;
 			<a th:href="@{/lead_list}">Leads</a> |
-			<a th:href="@{/list_activity}">Activities</a> |
+			<a th:href="@{/activity_list}">Activities</a> |
 			<a th:href="@{/opportunity_list}">Opportunities</a> |
-			<a th:href="@{/login_success}">Members</a> |
+			<a th:href="@{/user_list}">Members</a> |
 		</div>
 	</div>
 	<div class="text-left">
 		<h3>User List</h3>
+			<a th:href="@{/register}">Create New User</a>			&nbsp;&nbsp;&nbsp;
 	</div>
 	
 	<div class="text-center">
@@ -31,6 +32,7 @@
 					<th>E-mail</th>
 					<th>First Name</th>
 					<th>Last Name</th>
+					<th>Actions</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -39,10 +41,20 @@
 					<td th:text="${user.email}">E-mail</td>
 					<td th:text="${user.firstName}">First Name</td>
 					<td th:text="${user.lastName}">Last Name</td>
+					<td>
+<!--						<a th:href="@{/edit_user}">Edit</a>-->
+						<a th:href="@{'/load_edit_user/' + ${user.id}}">Edit</a>
+						<a th:href="@{'/delete_user/' + ${user.id}}" onclick="goBack()">Delete</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 </div>
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 </body>
 </html>
