--- a/src/main/resources/templates/activity_create_success.html
+++ b/src/main/resources/templates/activity_create_success.html
@@ -11,7 +11,7 @@
 <div class="container text-center">
     <h3>Activity Created successfully!</h3>
     <h4><a th:href="@{/new_activity}">Click here to Add Activity</a></h4>
-    <h4><a th:href="@{/list_activity}">Click here to View Activities</a></h4>
+    <h4><a th:href="@{/activity_list}">Click here to View Activities</a></h4>
 </div>
 
 </body>
