Corrected Menus and navigation

--- a/src/main/resources/templates/activity_list.html
+++ b/src/main/resources/templates/activity_list.html
@@ -2,15 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>List of Activities</title>
+    <title>Activity List</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
+
+    <div class="text-left">
+        <div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
+            <a th:href="@{/user_list}">Users</a> | &nbsp;
+            <a th:href="@{/product_list}">Product</a> |
+            <a th:href="@{/lead_list}">Leads</a> |
+            <a th:href="@{/activity_list}">Activities</a> |
+            <a th:href="@{/opportunity_list}">Opportunities</a> |
+            <a th:href="@{/user_list}">Members</a> |
+        </div>
+    </div>
     <div  align="center">
-        <h3>Activities List</h3>&nbsp;&nbsp;&nbsp;
+        <h3>Activity List</h3>&nbsp;&nbsp;&nbsp;
         <a th:href="@{/new_activity}">Create New Activity</a>
     </div>
 
