--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -13,13 +13,14 @@
 	<div class="text-left">
 		<div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
 			<a th:href="@{/user_list}">Users</a> | &nbsp;
+			<a th:href="@{/product_list}">Product</a> |
 			<a th:href="@{/lead_list}">Leads</a> |
 			<a th:href="@{/activity_list}">Activities</a> |
 			<a th:href="@{/opportunity_list}">Opportunities</a> |
 			<a th:href="@{/user_list}">Members</a> |
 		</div>
 	</div>
-	<div class="text-left">
+	<div align="center">
 		<h3>User List</h3>
 			<a th:href="@{/register}">Create New User</a>			&nbsp;&nbsp;&nbsp;
 	</div>
