--- a/src/main/resources/templates/lead_list.html
+++ b/src/main/resources/templates/lead_list.html
@@ -2,44 +2,60 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="ISO-8859-1">
     <title>Lead List</title>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div align="center">
-    <h1>Lead List</h1>
-    <a href="new">Create New Lead</a>
-    <br/><br/>
-    <table border="1" cellpadding="10">
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email id</th>
-            <th>Company</th>
-            <th>Phone Number</th>
-            <th>Status</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="leads : ${listLeads}">
-            <td th:text="${leads.id}">Lead ID</td>
-            <td th:text="${leads.firstName}">First Name</td>
-            <td th:text="${leads.lastName}">Last Name</td>
-            <td th:text="${leads.emailId}">Email Id</td>
-            <td th:text="${leads.company}">Company</td>
-            <td th:text="${leads.phoneNumber}">Phone Number</td>
-            <td th:text="${leads.status}">Status</td>
+<div class="container">
 
-            <td>
-                <a href="@{'/edit/' + ${leads.id}}">Edit</a>
-                <a href="@{'/delete/' + ${leads.id}}">Delete</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="text-left">
+        <div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
+            <a th:href="@{/user_list}">Users</a> | &nbsp;
+            <a th:href="@{/product_list}">Product</a> |
+            <a th:href="@{/lead_list}">Leads</a> |
+            <a th:href="@{/activity_list}">Activities</a> |
+            <a th:href="@{/opportunity_list}">Opportunities</a> |
+            <a th:href="@{/user_list}">Members</a> |
+        </div>
+    </div>
+    <div align="center">
+        <h3>Lead List</h3>
+        <a href="new">Create New Lead</a>
+        <br/><br/>
+        <table border="1" cellpadding="10">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email id</th>
+                <th>Company</th>
+                <th>Phone Number</th>
+                <th>Status</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="leads : ${listLeads}">
+                <td th:text="${leads.id}">Lead ID</td>
+                <td th:text="${leads.firstName}">First Name</td>
+                <td th:text="${leads.lastName}">Last Name</td>
+                <td th:text="${leads.emailId}">Email Id</td>
+                <td th:text="${leads.company}">Company</td>
+                <td th:text="${leads.phoneNumber}">Phone Number</td>
+                <td th:text="${leads.status}">Status</td>
+
+                <td>
+                    <a href="@{'/edit/' + ${leads.id}}">Edit</a>
+                    <a href="@{'/delete/' + ${leads.id}}">Delete</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <script>
 function goBack() {
