--- a/src/main/resources/templates/lead_list.html
+++ b/src/main/resources/templates/lead_list.html
@@ -50,6 +50,7 @@
                 <td>
                     <a th:href="@{'/load_edit_lead/' + ${leads.id}}">Edit</a>
                     <a th:href="@{'/delete_lead/' + ${leads.id}}">Delete</a>
+                    <a th:href="@{'/convert_lead/' + ${leads.id}}">Convert</a>
                 </td>
             </tr>
             </tbody>
