--- a/src/main/resources/templates/new_lead.html
+++ b/src/main/resources/templates/new_lead.html
@@ -37,8 +37,9 @@
                 <td><input type="text" th:field="*{phoneNumber}" autocomplete="off" /></td>
             </tr>
             <tr>
-                <td>Status: UNQUALIFIED / NEW / INPROGRESS / CONVERTED</td>
-                <td><input type="text" th:field="*{status}" autocomplete="off" /></td></br>
+                <td>Status:</td>
+                <td><input type="text" th:field="*{status}" autocomplete="off"/></td>
+                <td>Only enter UNQUALIFIED / NEW / INPROGRESS / CONVERTED<td/>
             </tr>
                 <tr>
                 <td colspan="2"><button type="submit">Save</button> </td>
