--- a/src/main/resources/templates/new_activity.html
+++ b/src/main/resources/templates/new_activity.html
@@ -76,6 +76,8 @@
 
             <div>
                 <button type="submit" class="btn btn-primary">Create Activity</button>
+                <button type="reset" class="btn btn-primary" value="Reset">Reset</button>
+                <button class="btn btn-primary" onclick="goBack()">Go Back</button>
             </div>
         </div>
     </form>
