--- a/src/main/resources/templates/edit_product.html
+++ b/src/main/resources/templates/edit_product.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8" />
+	<meta charset="ISO-8859-1">
+	<title>Sign Up - CodeJava</title>
+	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+</head>
 <title>Edit Product</title>
 </head>
 <body>
-	<div align="center">
-		<h1>Edit Product</h1>
+	<div class="container text-center">
+		<div>
+			<h1>Update Product</h1>
+		</div>
 		<br />
-		<form action="#" th:action="@{/save}" th:object="${product}"
-			method="post">
+		<form th:action="@{/process_edit_product}" th:object="${product}"
+			method="post" style="max-width: 600px; margin: 0 auto;">
+			<div class="m-3">
 
-			<table border="0" cellpadding="10">
-				<tr>				
-					<td>Product ID:</td>
-					<td>
-						<input type="text" th:field="*{id}" readonly="readonly" />
-					</td>
-				</tr>			
-				<tr>				
-					<td>Product Name:</td>
-					<td>
-						<input type="text" th:field="*{name}" />
-					</td>
-				</tr>
-				<tr>
-					<td>Brand:</td>
-					<td><input type="text" th:field="*{brand}" /></td>
-				</tr>
-				<tr>
-					<td>Made In:</td>
-					<td><input type="text" th:field="*{madein}" /></td>
-				</tr>
-				<tr>
-					<td>Price:</td>
-					<td><input type="text" th:field="*{price}" /></td>
-				</tr>								
-				<tr>
-					<td colspan="2"><button type="submit">Save</button> </td>
-				</tr>
-			</table>
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Product ID: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{id}" class="form-control" readonly="readonly" />
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Product Name: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{name}" class="form-control"  />
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Product Price: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{price}" class="form-control"  />
+					</div>
+				</div>
+
+				<div>
+					<button type="submit" class="btn btn-primary">Update</button>
+					<button type="reset" class="btn btn-primary" value="Reset">Reset</button>
+					<button class="btn btn-primary" onclick="goBack()">Go Back</button>
+				</div>
+
+			</div>
 		</form>
 	</div>
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 </body>
 </html>
