--- a/src/main/resources/templates/edit_success.html
+++ b/src/main/resources/templates/edit_success.html
@@ -10,8 +10,14 @@
 <body>
 	<div class="container text-center">
 		<h3>Updated successfully!</h3>
-			<a th:href="@{/login_success}">Back to Users</a>
+
+		<button class="btn btn-primary" onclick="goBack()">Go Back</button>
 
 	</div>
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 </body>
 </html>
