--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -9,7 +9,14 @@
 </head>
 <body>
 <div class="container">
-
+	<div class="text-right">
+		<form th:action="@{/logout}" method="post">
+			<p>
+				Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+			</p>
+			<input type="submit" value="Sign Out" />
+		</form>
+	</div>
 	<div class="text-left">
 		<div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
 			<a th:href="@{/user_list}">Users</a> | &nbsp;
@@ -43,7 +50,6 @@
 					<td th:text="${user.firstName}">First Name</td>
 					<td th:text="${user.lastName}">Last Name</td>
 					<td>
-<!--						<a th:href="@{/edit_user}">Edit</a>-->
 						<a th:href="@{'/load_edit_user/' + ${user.id}}">Edit</a>
 						<a th:href="@{'/delete_user/' + ${user.id}}" onclick="goBack()">Delete</a>
 					</td>
