--- a/src/main/resources/templates/login_success.html
+++ b/src/main/resources/templates/login_success.html
@@ -24,8 +24,8 @@
 			<a th:href="@{/employees}">Products</a> |
 			<a th:href="@{/employees}">Leads</a> |
 			<a th:href="@{/employees}">Activities</a> |
-			<a th:href="@{/opportunities_page}">Opportunities</a> |
-			<a th:href="@{/employees}">Members</a> |
+			<a th:href="@{/opportunity_list}">Opportunities</a> |
+			<a th:href="@{/member_list}">Members</a> |
 		</div>
 	</div>
 	<div class="text-left">
