--- a/src/main/resources/templates/member_succes.html
+++ b/src/main/resources/templates/member_succes.html
@@ -2,15 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>New Opportunity Created</title>
+    <title>New Member Created</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container text-center">
-    <h3>New Opportunity Created!</h3>
-    <h4><a th:href="@{/opportunity_list}">Click here </a></h4>
+    <h3>New Member Created!</h3>
+    <h4><a th:href="@{/member_list}">Click here </a></h4>
 </div>
 
 </body>
