--- a/src/main/resources/templates/member_update_success.html
+++ b/src/main/resources/templates/member_update_success.html
@@ -2,16 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>New Opportunity Created</title>
+    <title>Update Success</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container text-center">
-    <h3>New Opportunity Created!</h3>
-    <h4><a th:href="@{/opportunity_list}">Click here </a></h4>
-</div>
+    <h3>Updated successfully!</h3>
+    <a th:href="@{/member_list}">Back to Member List</a>
 
+</div>
 </body>
 </html>
