--- a/src/main/resources/templates/opportunity_update_success.html
+++ b/src/main/resources/templates/opportunity_update_success.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container text-center">
     <h3>Updated successfully!</h3>
-    <a th:href="@{/opportunities_page}">Back to Opportunity List</a>
+    <a th:href="@{/opportunity_list}">Back to Opportunity List</a>
 
 </div>
 </body>
