--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -24,7 +24,7 @@
 			<a th:href="@{/employees}">Products</a> |
 			<a th:href="@{/employees}">Leads</a> |
 			<a th:href="@{/employees}">Activities</a> |
-			<a th:href="@{/opportunities_page}">Opportunities</a> |
+			<a th:href="@{/opportunity_list}">Opportunities</a> |
 			<a th:href="@{/employees}">Members</a> |
 		</div>
 	</div>
