--- a/src/main/resources/templates/opportunity_list.html
+++ b/src/main/resources/templates/opportunity_list.html
@@ -28,9 +28,9 @@
         </div>
     </div>
     <div class="text-left">
-        <h1>Opportunity List</h1>
+        <h1 class="text-center">Opportunity List</h1>
     </div>
-    <div class="text-right">
+    <div class="text-center">
         <h3></h3>
         <a th:href="@{/opportunity_page}">Create New Opportunity</a>			&nbsp;&nbsp;&nbsp;
     </div>
@@ -38,7 +38,7 @@
 
     <div class="text-center">
         <table class="table table-striped table-bordered">
-            <thead class="thread-dark">
+            <thead class="thead-dark">
             <tr>
                 <th>User ID</th>
                 <th>Name </th>
