--- a/src/main/resources/templates/opportunity_list.html
+++ b/src/main/resources/templates/opportunity_list.html
@@ -24,11 +24,11 @@
             <a th:href="@{/lead_list}">Leads</a> |
             <a th:href="@{/activity_list}">Activities</a> |
             <a th:href="@{/opportunity_list}">Opportunities</a> |
-            <a th:href="@{/user_list}">Members</a> |
+            <a th:href="@{/member_list}">Members</a> |
         </div>
     </div>
     <div class="text-left">
-        <h1 class="text-center">Opportunity List</h1>
+        <h3 class="text-center">Opportunity List</h3>
     </div>
     <div class="text-center">
         <h3></h3>
