Corrected Login Navigation

--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -19,13 +19,12 @@
 	</div>
 	<div class="text-left">
 		<div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
-			<a th:href="@{/login_success}">Users</a> | &nbsp;
-<!--			<a th:href="@{/employees}">Employees</a> |-->
-			<a th:href="@{/employees}">Products</a> |
-			<a th:href="@{/employees}">Leads</a> |
-			<a th:href="@{/employees}">Activities</a> |
+			<a th:href="@{/user_list}">Users</a> | &nbsp;
+			<a th:href="@{/product_list}">Product</a> |
+			<a th:href="@{/lead_list}">Leads</a> |
+			<a th:href="@{/activity_list}">Activities</a> |
 			<a th:href="@{/opportunity_list}">Opportunities</a> |
-			<a th:href="@{/employees}">Members</a> |
+			<a th:href="@{/user_list}">Members</a> |
 		</div>
 	</div>
 	<div align="center">
