--- a/src/main/resources/templates/member_list.html
+++ b/src/main/resources/templates/member_list.html
@@ -10,7 +10,22 @@
 <body>
 <div class="container">
     <div class="text-right">
-
+        <form th:action="@{/logout}" method="post">
+            <p>
+                Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+            </p>
+            <input type="submit" value="Sign Out" />
+        </form>
+    </div>
+    <div class="text-left">
+        <div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
+            <a th:href="@{/user_list}">Users</a> | &nbsp;
+            <a th:href="@{/product_list}">Product</a> |
+            <a th:href="@{/lead_list}">Leads</a> |
+            <a th:href="@{/activity_list}">Activities</a> |
+            <a th:href="@{/opportunity_list}">Opportunities</a> |
+            <a th:href="@{/user_list}">Members</a> |
+        </div>
     </div>
     <div class="text-left">
         <h1>Member List</h1>
