--- a/src/main/resources/templates/member_list.html
+++ b/src/main/resources/templates/member_list.html
@@ -28,7 +28,17 @@
         </div>
     </div>
     <div class="text-left">
-        <h1>Member List</h1>
+        <div style="border: 1px solid #ccc; padding: 5px; margin-bottom: 20px;">
+            <a th:href="@{/user_list}">Users</a> | &nbsp;
+            <a th:href="@{/product_list}">Product</a> |
+            <a th:href="@{/lead_list}">Leads</a> |
+            <a th:href="@{/activity_list}">Activities</a> |
+            <a th:href="@{/opportunity_list}">Opportunities</a> |
+            <a th:href="@{/member_list}">Members</a> |
+        </div>
+    </div>
+    <div class="text-center">
+        <h3>Member List</h3>
     </div>
     <div class="text-right">
         <h3></h3>
@@ -38,7 +48,7 @@
 
     <div class="text-center">
         <table class="table table-striped table-bordered">
-            <thead class="thread-dark">
+            <thead class="thead-dark">
             <tr>
                 <th>ID</th>
                 <th>Account Name </th>
