--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -24,7 +24,7 @@
 			<a th:href="@{/lead_list}">Leads</a> |
 			<a th:href="@{/activity_list}">Activities</a> |
 			<a th:href="@{/opportunity_list}">Opportunities</a> |
-			<a th:href="@{/user_list}">Members</a> |
+			<a th:href="@{/member_list}">Members</a> |
 		</div>
 	</div>
 	<div align="center">
