--- a/src/main/resources/templates/lead_list.html
+++ b/src/main/resources/templates/lead_list.html
@@ -32,8 +32,9 @@
         <h3>Lead List</h3>
         <a href="new_lead">Create New Lead</a>
         <br/><br/>
-        <table border="1" cellpadding="10">
-            <thead>
+        <div class="text-center">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
             <tr>
                 <th>ID</th>
                 <th>First Name</th>
@@ -62,6 +63,7 @@
             </tr>
             </tbody>
         </table>
+    </div>
     </div>
 </div>
 <script>
