--- a/src/main/resources/templates/new_lead.html
+++ b/src/main/resources/templates/new_lead.html
@@ -18,19 +18,19 @@
         <table border="0" cellpadding="10">
             <tr>
                 <td>First Name:</td>
-                <td><input type="text" th:field="*{firstName}" autocomplete="off"/></td>
+                <td><input type="text" th:field="*{firstName}" autocomplete="off" required minlength="2" maxlength="20"/></td>
             </tr>
             <tr>
                 <td>Last Name:</td>
-                <td><input type="text" th:field="*{lastName}" autocomplete="off" /></td>
+                <td><input type="text" th:field="*{lastName}" autocomplete="off" required minlength="2" maxlength="20"/></td>
             </tr>
             <tr>
                 <td>Company:</td>
-                <td><input type="text" th:field="*{company}" autocomplete="off" /></td>
+                <td><input type="text" th:field="*{company}" autocomplete="off" required minlength="2" maxlength="20"/></td>
             </tr>
             <tr>
                 <td>Email Id:</td>
-                <td><input type="text" th:field="*{emailId}" autocomplete="off" /></td>
+                <td><input type="email" th:field="*{emailId}" autocomplete="off" /></td>
             </tr>
             <tr>
                 <td>Phone Number:</td>
@@ -57,5 +57,10 @@
         </table>
     </form>
 </div>
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 </body>
 </html>
