--- a/src/main/resources/templates/edit_activity.html
+++ b/src/main/resources/templates/edit_activity.html
@@ -61,7 +61,7 @@
             <div class="form-group row">
                 <label class="col-4 col-form-label">Due Date : </label>
                 <div class="col-8">
-                    <input type="text" th:field="*{dueDate}" class="form-control" placeholder="mm/dd/yyyy"/>
+                    <input type="text" th:field="*{dueDate}" class="form-control" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d" placeholder="mm/dd/yyyy" required/>
                     <td>Re-enter the date in mm/dd/yyyy format</td>
                 </div>
             </div>
