--- a/src/main/resources/templates/edit_opportunity.html
+++ b/src/main/resources/templates/edit_opportunity.html
@@ -35,8 +35,8 @@
             <div class="form-group row">
                 <label class="col-4 col-form-label">CloseDate: </label>
                 <div class="col-8">
-                    <input type="datetime" th:field="*{date}" class="form-control"
-                         />
+                    <input type="date" th:field="*{date}" class="form-control" placeholder="dd/mm/yyyy"/>
+                    <td>Re-Enter the date in dd/mm/yyyy format</td>
                 </div>
             </div>
 
