--- a/src/main/resources/templates/create_member.html
+++ b/src/main/resources/templates/create_member.html
@@ -25,14 +25,14 @@
         <div class="form-group row">
             <label class="col-4 col-form-label">Account Name: </label>
             <div class="col-8">
-                <input type="text" th:field="*{accname}" class="form-control" >
+                <input type="text" th:field="*{accname}" class="form-control" minlength="6" maxlength="10">
             </div>
         </div>
 
         <div class="form-group row">
             <label class="col-4 col-form-label">Account Number:</label>
             <div class="col-8">
-                <input type="text" th:field="*{accno}" class="form-control">
+                <input type="text" th:field="*{accno}" class="form-control" pattern="^\d{10}$">
             </div>
         </div>
 
