--- a/src/main/resources/templates/new_activity.html
+++ b/src/main/resources/templates/new_activity.html
@@ -18,7 +18,6 @@
             <div class="form-group row">
                 <label class="col-4 col-form-label">Type : </label>
                 <div class="col-8">
-                    <!--<input type="text" th:field="*{activityType}" class="form-control"  />-->
                     <select th:field="*{activityType}" class="form-control">
                         <option value = "CALL"> Call</option>
                         <option value = "EMAIL"> E-Mail</option>
@@ -53,7 +52,7 @@
             <div class="form-group row">
                 <label class="col-4 col-form-label">Due Date : </label>
                 <div class="col-8">
-                    <input type="text" th:field="*{dueDate}" class="form-control" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d" placeholder="mm/dd/yyyy" required/>
+                    <input type="date" th:field="*{dueDate}" class="form-control" placeholder="dd/mm/yyyy"/>
                 </div>
             </div>
             <div class="form-group row">
