--- a/src/main/resources/templates/edit_opportunity.html
+++ b/src/main/resources/templates/edit_opportunity.html
@@ -26,7 +26,7 @@
             <div class="form-group row">
                 <label class="col-4 col-form-label">Name:</label>
                 <div class="col-8">
-                    <input type="text" th:field="*{name}" class="form-control" />
+                    <input type="text" th:field="*{name}" class="form-control" autocomplete="off"  />
                 </div>
             </div>
 
