--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="ISO-8859-1">
+<!--	<meta charset="ISO-8859-1">
 	<title>CRM Home</title>
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>-->
+
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<title>CRM Home</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+		  crossorigin="anonymous" />
 </head>
 <body>
-	<div class="container text-center">
-		<h1>CRM Home</h1>
+<!--	<div class="container text-center">-->
+	<div class="container align-items-center">
+		<form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
+			<div class="border border-secondary p-3 rounded">
+				<h1>CRM Home</h1>
 
-<!--		<h5><a th:href="@{/user_list}">Login</a></h5>-->
-		<h5><a th:href="@{/login}">Login</a></h5>
-		<h5><a th:href="@{/register}">Register</a></h5>
-
+		<!--		<h5><a th:href="@{/user_list}">Login</a></h5>-->
+				<h5><a th:href="@{/login}">Login</a></h5>
+				<h5><a th:href="@{/register}">Register</a></h5>
+			</div>
+		</form>
 	</div>
 	
 </body>
