--- a/src/main/resources/templates/activity_list.html
+++ b/src/main/resources/templates/activity_list.html
@@ -39,8 +39,8 @@
             <tr>
                 <th>Activity Id</th>
                 <th>Type</th>
-            <!--    <th>Account Name</th>
-                <th>Assigned To</th>-->
+                <th>Lead Name</th>
+                <th>Assigned To</th>
                 <th>Due Date</th>
                 <th>Status</th>
                 <th>Comments</th>
@@ -51,8 +51,8 @@
             <tr th:each="activity : ${list}">
                 <td th:text="${activity.id}">Activity Id</td>
                 <td th:text="${activity.activityType}">Type</td>
-            <!--    <td th:text="${activity.leadAccountName}">Account Name</td>
-                <td th:text="${activity.assignedTo}">Assigned To</td>-->
+                <td th:text="${activity.leadAccountName.firstName} + ' ' + ${activity.leadAccountName.lastName}">Account Name</td>
+                <td th:text="${activity.assignedTo.firstName + ' ' + activity.assignedTo.lastName}">Assigned To</td>
                 <td th:text="${activity.dueDate}">Due Date</td>
                 <td th:text="${activity.status}">Status</td>
                 <td th:text="${activity.comments}">Comments</td>
