--- a/src/main/resources/templates/new_lead.html
+++ b/src/main/resources/templates/new_lead.html
@@ -49,6 +49,16 @@
                     </datalist>
                 </td>
             </tr>
+            <tr>
+                <td>CRM Products</td>
+                <td>
+                    <select name="productList" class="form-control select-checkbox" multiple>
+                        <option th:each="product : ${productList}"
+                                th:value="${product.id}"
+                                th:text="${product.name}"></option>
+                    </select>
+                </td>
+            </tr>
                 <tr>
                 <td colspan="2"><button type="submit">Save</button> </td>
                 <td colspan="2"><button type="reset" value="Reset">Reset</button></td>
